--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
             <h3 class="text-xl font-bold mb-4 text-gray-900 dark:text-white" data-i18n="wechat-title">添加我的微信</h3>
             <p class="text-sm text-gray-500 mb-4 dark:text-gray-400"><span data-i18n="wechat-desc">扫一扫，或搜索微信号:</span> <span class="font-mono bg-blue-50 text-blue-600 dark:bg-slate-700 dark:text-blue-300 px-2 py-0.5 rounded border border-blue-100 dark:border-slate-600">XLiuuu_975</span></p>
             <div class="relative w-64 h-64 mx-auto bg-gray-100 dark:bg-gray-700 rounded-xl overflow-hidden border-2 border-dashed border-gray-300 dark:border-gray-600 group cursor-pointer hover:border-blue-500 transition-all shadow-inner" onclick="document.getElementById('qrcode-input').click()">
-                <img id="qrcode-img" src="wechat.jpg" alt="微信二维码" class="w-full h-full object-cover">
+                <img id="qrcode-img" src="wechat.jpeg" alt="微信二维码" class="w-full h-full object-cover">
                 <div class="absolute inset-0 bg-black/60 flex flex-col items-center justify-center text-white opacity-0 group-hover:opacity-100 transition-opacity backdrop-blur-[2px]"><i class="fas fa-cloud-upload-alt text-3xl mb-2"></i><span class="text-sm font-bold" data-i18n="upload-qrcode">点击上传二维码</span></div>
             </div>
             <input type="file" id="qrcode-input" accept="image/*" class="hidden" onchange="previewQRCode(this)">
