--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
             
             <div class="relative w-64 h-64 mx-auto bg-gray-100 dark:bg-gray-700 rounded-xl overflow-hidden border-2 border-dashed border-gray-300 dark:border-gray-600 group cursor-pointer hover:border-blue-500 transition-all shadow-inner" onclick="document.getElementById('qrcode-input').click()">
                 <!-- 修改：使用本地 wechat.jpg，并保留网络生成码作为备用 -->
-                <img id="qrcode-img" src="wechat.jpg" alt="微信二维码" class="w-full h-full object-cover" onerror="this.src='https://api.qrserver.com/v1/create-qr-code/?size=250x250&data=WeChat:XLiuuu_975'">
+                <img id="qrcode-img" src="wechat.jpeg" alt="微信二维码" class="w-full h-full object-cover" onerror="this.src='https://api.qrserver.com/v1/create-qr-code/?size=250x250&data=WeChat:XLiuuu_975'">
                 
                 <div class="absolute inset-0 bg-black/60 flex flex-col items-center justify-center text-white opacity-0 group-hover:opacity-100 transition-opacity backdrop-blur-[2px]">
                     <i class="fas fa-cloud-upload-alt text-3xl mb-2"></i>
